<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/google3"
        android:scaleType="fitXY"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:textAllCaps="true"
        android:textSize="@dimen/dimen7"
        android:layout_gravity="center"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name2"
        android:layout_gravity="center"
        android:textSize="@dimen/dimen6"
        android:layout_margin="@dimen/dimen1"
        android:textColor="@android:color/black"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:layout_width="@dimen/dimen3"
        android:layout_height="@dimen/dimen3"
        android:layout_margin="@dimen/dimen1"
        android:src="@drawable/phone"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name3"
        android:textSize="@dimen/dimen5"
        android:layout_margin="@dimen/dimen1"
        android:textColor="@android:color/black"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="@dimen/dimen3"
            android:layout_height="@dimen/dimen3"
            android:layout_margin="@dimen/dimen1"
            android:src="@drawable/location1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name5"
            android:textSize="@dimen/dimen4"
            android:textColor="@android:color/black"
            android:layout_margin="@dimen/dimen2"
/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dimen3"
            android:layout_height="@dimen/dimen3"
            android:src="@drawable/web1"
            android:layout_margin="@dimen/dimen1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name4"
            android:textSize="@dimen/dimen4"
            android:layout_margin="@dimen/dimen1"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>